--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Start backend
         run: |
-          nohup mvn --batch-mode -pl backend -am -DskipTests -Dspring-boot.run.profiles=dev package spring-boot:run  > backend.log 2>&1 &
+          nohup mvn --batch-mode -pl backend -am -DskipTests -Dspring-boot.run.profiles=dev clean package spring-boot:run  > backend.log 2>&1 &
           echo $! > backend.pid
 
       - name: Installer node moduler
