--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -31,6 +31,7 @@ app:
     saksbehandler: gr_saksbehandler
     attestant: gr_attestant
     les: gr_les
+    drift: gr_drift
   pdl:
     audience: api://mock.pdl.pdl-api/.default
     url: http://localhost:9080/pdl-mock
