--- a/e2e/package.json
+++ b/e2e/package.json
@@ -15,6 +15,8 @@
     "@biomejs/biome": "2.3.11",
     "@faker-js/faker": "^10.2.0",
     "@playwright/test": "^1.57.0",
-    "dotenv": "^17.2.3"
+    "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
+    "uuid": "^13.0.0"
   }
 }
