--- a/mocks/mock-server/pom.xml
+++ b/mocks/mock-server/pom.xml
@@ -76,6 +76,15 @@
             <groupId>com.jayway.jsonpath</groupId>
             <artifactId>json-path</artifactId>
         </dependency>
+        <dependency>
+            <groupId>tools.jackson.module</groupId>
+            <artifactId>jackson-module-kotlin</artifactId>
+        </dependency>
+        <!-- Brukes av springdoc inntil videre. -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.module</groupId>
+            <artifactId>jackson-module-kotlin</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>net.datafaker</groupId>
