Kopierer over pdfgen fra helt

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -47,6 +47,7 @@ updates:
     directories:
     - "/backend"
     - "/mocks/mock-server"
+    - "/pdfgen"
     schedule:
       interval: "weekly"
  
