--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -65,4 +65,8 @@ management:
     web:
       exposure:
         include: health,info,prometheus
-
+springdoc:
+  api-docs:
+    enabled: true
+  swagger-ui:
+    enabled: true
