Fikser bug for visning av modal etter avslag på attestering

--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -10,7 +10,7 @@ spring:
   application:
     name: superhelt
   http:
-    client:
+    clients:
       connect-timeout: 1s
       read-timeout: 3s
   security:
