--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,43 +1,46 @@
 {
-  "name": "super-frontend",
-  "version": "0.1.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "vite --port 3000",
-    "start": "vite --port 3000",
-    "build": "vite build && tsc",
-    "serve": "vite preview",
-    "test": "vitest run",
-    "openapi-ts": "openapi-ts"
-  },
-  "engines": {
-    "node": ">=24"
-  },
-  "dependencies": {
-    "@navikt/ds-css": "^8.5.0",
-    "@navikt/ds-react": "^8.5.0",
-    "@tanstack/react-query": "^5.90.20",
-    "@tanstack/react-query-devtools": "^5.91.3",
-    "@tanstack/react-router": "^1.158.1",
-    "@tanstack/react-router-devtools": "^1.158.1",
-    "@tiptap/pm": "^3.19.0",
-    "@tiptap/react": "^3.19.0",
-    "@tiptap/starter-kit": "^3.19.0",
-    "dompurify": "^3.3.1",
-    "react": "^19.2.4",
-    "react-dom": "^19.2.4"
-  },
-  "devDependencies": {
-    "@hey-api/openapi-ts": "0.92.3",
-    "@tanstack/router-plugin": "^1.158.1",
-    "@types/css-modules": "^1.0.5",
-    "@types/node": "^24.10.11",
-    "@types/react": "^19.2.13",
-    "@types/react-dom": "^19.2.3",
-    "@vitejs/plugin-react": "^5.1.3",
-    "typescript": "^5.9.3",
-    "vite": "^7.3.1",
-    "vitest": "^4.0.18"
-  }
+	"name": "super-frontend",
+	"version": "0.1.0",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"dev": "vite --port 3000",
+		"start": "vite --port 3000",
+		"build": "vite build && tsc",
+		"serve": "vite preview",
+		"test": "vitest run",
+        "biome": "biome ci",
+        "biome:write": "biome check --write",
+		"openapi-ts": "openapi-ts"
+	},
+	"engines": {
+		"node": ">=24"
+	},
+	"dependencies": {
+		"@navikt/ds-css": "^8.5.0",
+		"@navikt/ds-react": "^8.5.0",
+		"@tanstack/react-query": "^5.90.20",
+		"@tanstack/react-query-devtools": "^5.91.3",
+		"@tanstack/react-router": "^1.158.1",
+		"@tanstack/react-router-devtools": "^1.158.1",
+		"@tiptap/pm": "^3.19.0",
+		"@tiptap/react": "^3.19.0",
+		"@tiptap/starter-kit": "^3.19.0",
+		"dompurify": "^3.3.1",
+		"react": "^19.2.4",
+		"react-dom": "^19.2.4"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "2.4.2",
+		"@hey-api/openapi-ts": "0.92.3",
+		"@tanstack/router-plugin": "^1.158.1",
+		"@types/css-modules": "^1.0.5",
+		"@types/node": "^24.10.11",
+		"@types/react": "^19.2.13",
+		"@types/react-dom": "^19.2.3",
+		"@vitejs/plugin-react": "^5.1.3",
+		"typescript": "^5.9.3",
+		"vite": "^7.3.1",
+		"vitest": "^4.0.18"
+	}
 }
