--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -10,9 +10,9 @@ spring:
   application:
     name: superhelt
   http:
-    client:
+    clients:
       connect-timeout: 1s
-      read-timeout: 3s
+      read-timeout: 10s
   security:
     oauth2:
       resourceserver:
@@ -65,4 +65,8 @@ management:
     web:
       exposure:
         include: health,info,prometheus
-
+springdoc:
+  api-docs:
+    enabled: true
+  swagger-ui:
+    enabled: true
