Mer lesevennlige sakstyper + fix for pdfgen i docker

--- a/pdfgen/Dockerfile
+++ b/pdfgen/Dockerfile
@@ -1,4 +1,4 @@
-FROM ghcr.io/navikt/pdfgen:2.0.109
+FROM --platform=linux/amd64 ghcr.io/navikt/pdfgen:2.0.109
 COPY templates /app/templates
 COPY fonts /app/fonts
 COPY resources /app/resources
